   kpresenter, and try to insert it again : it gets cached, and the old one gets inserted.
- Removed some uselsess stuff
- Updated TODO file

Reggie, 17 - 19.5.1999:
-----------------------
- I completely rewrote the pixmap handling in KPresenter (finally got rid of some really ugly hacks):
  - Splitted KPPixmapCollection into two parts (KPPixmapCollection and KPPixmapDataCollection). Inserting
    pixmaps and lookups are faster now as I'm using QMaps. Also the code is much shorter
    and ref-counting finally works :-)
  - Loading/Changing pixmaps/background pixmaps is much faster, because there is no need anymore to convert
    a pixmap to an internal KPresenter pixmap format
  - Saving/Loading pixmaps in(to) documents is cleaner and faster now: I'm using the features of KoStore
  - Old presentations can be still opened (I added some convert-functions for compatibility)

I didn't test the new pixmap stuff a lot yet, so there may be some bugs in it. I'll do more
testing tomorrow...

- Fixed loading templates and loading docs using the template dialog (Also stores and embedded parts
  are loaded in these cases correctly)

- fix in saving pixmap key

Reggie, 20.5.1999:
------------------
- Fixed drawing background and borders Textobjects and embedded Partobjects
  (background and borders were not rotated when the object was rotated)

Reggie, 22 - 23.5.1999:
-----------------------
- Small fixes in the pixmap collection
- Implemented a clipart collection simlar to the pixmap collection
- Cliparts are now saved into KPresenter docments (using KoStore)
  (old docs can be still loaded)

Reggie, 26.5.1999:
------------------
- Started implementing the option to let objects disappear in screenpresentations: Configuration,
  Loading/Saving and Undo/Redo already works. I'll implement the disappearing (with effects of course :-)
  tomorrow...

Reggie, 28.5.1999:
------------------
- Some QStrList -> QStringList